--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 </head>
 <body id ="gradient">
-    <h1>Background Generator</h1>
+    <h1>Cool Background Generator</h1>
    
     <input type="color" class="color1" name="color1" value="#f4f4f4">
     <input type="color" class="color2" name="color2" value="#ff0000">
