--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
    
     <input type="color" class="color1" name="color1" value="#f4f4f4">
     <input type="color" class="color2" name="color2" value="#ff0000">
-    <h2>Currrent CSS Background</h2>
+    <h2>This is the background</h2>
     <h3></h3>
     <script type="text/javascript" src="dom.js"></script>
 
